Add responsive navbar
Navbar now shrinks to a sidenav on small screens

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,14 @@
 a {
     font-size: 1.25em;
 }
+
+#side-nav {
+    background-color: rgba(black, .85);
+    backdrop-filter: blur(3px);
+}
+
+h2 {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 2.65em;
+    letter-spacing: .07em;
+}
