--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -1,9 +1,9 @@
-h1 {
-    font-family: "Poppins", sans-serif;
-    font-size: 3.5em;
+h3 {
+    font-family: "Lora", serif;
+    letter-spacing: .3em;
 }
 
-h3 {
-    font-family: "Noto", serif;
-    font-style: italic;
+h4 {
+    font-family: "Lora", serif;
+    letter-spacing: .25em;
 }
