--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -3,7 +3,7 @@
 <h3 class="mt-5 mx-auto w-10">- Since 2001 -</h3>
 <img src="./assets/jubilee.png">
 
-<h1 class="mt-3"><b>Encounter the Presence of God</b></h1>
+<h4 class="mt-3 text-uppercase"><b>Encounter the Presence of God</b></h4>
 
 
 </div>
