--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<div fxHide.gt-sm="true">
+<!--TODO: FIX DYNAMIC NAVBAR-->
+<div *ngIf="screenSizeService.isMobile">
   <div
     class="position-fixed w-100 h-100"
     style="top: 0; right: 0"
@@ -36,8 +37,8 @@
 
 <nav
   class="navbar navbar-expand-md navbar-light bg-white py-2"
-  fxHide.lt-sm="true"
->
+  *ngIf="!screenSizeService.isMobile">
+  
   <a class="navbar-brand ms-5 me-5" routerLink="/">
     <img src="./assets/jubilee_black.png" alt="Jubilee" height="60px" />
   </a>
