--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "~@fortawesome/fontawesome-free/scss/fontawesome";
-@import "~@fortawesome/fontawesome-free/scss/regular";
-@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "@fortawesome/fontawesome-free/scss/fontawesome";
+@import "@fortawesome/fontawesome-free/scss/regular";
+@import "@fortawesome/fontawesome-free/scss/solid";
 
 /*** THEME ***/
 @import "theme.scss";
 
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap';
 
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
-@import '~ngx-toastr/toastr';
+@import 'ngx-toastr/toastr';
 
 h1 {
     font-family: "Bebas Neue", sans-serif;
