Add test message

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -5,5 +5,6 @@
 
 <h4 class="font-secondary mt-3 text-uppercase"><b>Encounter the Presence of God</b></h4>
 
+<h3>Testing Firebase Preview</h3>
 
 </div>
