--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,9 +1,8 @@
 <div class="container text-center">
 
-<h4 class="font-secondary mt-4 mx-auto w-10">- Since 2001 -</h4>
+<h4 class="font-secondary mt-4 mx-auto w-10"  style="letter-spacing: .25em">- Since 2001 -</h4>
 <img src="./assets/jubilee.png">
 
-<h3 class="font-secondary mt-3 text-uppercase"><b>Encounter the Presence of God</b></h3>
-
+<h3 class="font-secondary mt-3 text-uppercase" style="letter-spacing: .3em"><b>Encounter the Presence of God</b></h3>
 
 </div>
