--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,7 +4,7 @@ $theme-colors: (
     "light":      #b5b5b5,
     "dark":       #02163d,
     "primary":    #0557ee,
-    "secondary":  #5696ff,
+    "secondary":  #e0675c,
     "info":       #5ad6ff,
     "success":    #00bd6e,
     "warning":    #e9d200,
