--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,35 +14,54 @@
 
 @import 'ngx-toastr/toastr';
 
+body {
+    font-family: "Lora", sans-serif;
+    font-size: 1em;
+    letter-spacing: .04em;
+}
+
+button span {
+    font-family: "Lora", sans-serif;
+    font-size: 2.2em;
+    letter-spacing: .06em;
+}
+
+small {
+    font-family: "Lora", sans-serif;
+    font-size: .75rem;
+    letter-spacing: .05em;
+    font-style: italic;
+}
+
 h1 {
     font-family: "Bebas Neue", sans-serif;
     font-size: 4em;
-    letter-spacing: .08em;
+    letter-spacing: .09em;
 }
 h2 {
     font-family: "Bebas Neue", sans-serif;
     font-size: 2.6em;
-    letter-spacing: .07em;
+    letter-spacing: .08em;
 }
 h3 {
     font-family: "Bebas Neue", sans-serif;
     font-size: 2.2em;
-    letter-spacing: .06em;
+    letter-spacing: .07em;
 }
 h4 {
     font-family: "Bebas Neue", sans-serif;
     font-size: 1.4em;
-    letter-spacing: .05em;
+    letter-spacing: .06em;
 }
 h5 {
     font-family: "Bebas Neue", sans-serif;
     font-size: 1.2em;
-    letter-spacing: .04em;
+    letter-spacing: .05em;
 }
 h6 {
     font-family: "Bebas Neue", sans-serif;
     font-size: 1.2em;
-    letter-spacing: .04em;
+    letter-spacing: .05em;
 }
 
 h1.font-secondary {
