--- a/src/app/components/pages/get-to-know-us/get-to-know-us.component.html
+++ b/src/app/components/pages/get-to-know-us/get-to-know-us.component.html
@@ -1,32 +1,29 @@
 <div class="container-fluid text-center">
+  <div class="row bg-white text-dark px-3 py-4 border-top text-start">
+    <h1 class="font-secondary">Statement of Faith</h1>
 
+    <div class="d-flex flex-row">
+      <div class="pe-3">
+        <h4>The Holy Scriptures</h4>
+        <p class="mb-0">
+          We believe the Holy Scriptures of the Old and New Testaments to be the
+          true, immutable, steadfast, authoritative, written Word of God; that
+          they were written by men of old as they were moved upon and inspired
+          by the Holy Spirit. These scriptures are inerrant, infallible and
+          God-breathed, and therefore are the final authority for faith and
+          life.
+        </p>
+        <small>[2 Timothy 3:16-17, 2 Peter 1:20-21]</small>
+      </div>
 
-    <div class="row bg-white text-dark px-5 py-3 border-top text-start">
-        <h1 class="font-secondary">Statement of Faith</h1>
-
-        <div class="d-flex flex-row">
-            <div class="pe-3">
-                <h4>The Holy Scriptures</h4>
-                <p class="mb-0">We believe the Holy Scriptures of the Old and New Testaments to be
-                    the
-                    true, immutable,
-                    steadfast, authoritative, written Word of God; that they were written by men of old as they were
-                    moved
-                    upon
-                    and inspired by the Holy Spirit. These scriptures are inerrant, infallible and God-breathed, and
-                    therefore
-                    are the final authority for faith and life.</p>
-                <small>[2 Timothy 3:16-17, 2 Peter 1:20-21]</small>
-            </div>
-
-            <div class="ps-3">
-                <h4>The Eternal Godhead</h4>
-                <p>We believe there is one true and living God eternally existent in three persons
-                    in
-                    the Father, Son, and Holy Spirit; equal in every divine perfection.</p>
-            </div>
-        </div>
+      <div class="ps-3">
+        <h4>The Eternal Godhead</h4>
+        <p>
+          We believe there is one true and living God eternally existent in
+          three persons in the Father, Son, and Holy Spirit; equal in every
+          divine perfection.
+        </p>
+      </div>
     </div>
-
-
+  </div>
 </div>
